[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "halsarc"
version = "0.2.6"
authors = [
  { name="Timothy Flavin", email="timothy.c.flavin@gmail.com" },
]
description = "Search and rescue multi agent environment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Timothy-Flavin/halsarc/"
"Bug Tracker" = "https://github.com/Timothy-Flavin/halsarc/issues"